--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,47 @@
-body {
-  background: red;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
+
+html {
+  box-sizing: border-box;
+  font-family: "Oswald", "ArialMT", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+  font-style: normal;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+@import "fonts";
+@import "mixins";
+@import "blocks/visually-hidden";
+@import "blocks/button";
+@import "blocks/main-nav";
+@import "blocks/main-page";
+@import "blocks/main-program";
+@import "blocks/additional-card";
+@import "blocks/additional-products";
+@import "blocks/advantages";
+@import "blocks/collaboration";
+@import "blocks/example";
+@import "blocks/features";
+@import "blocks/hero";
+@import "blocks/main-catalog";
+@import "blocks/more-products";
+@import "blocks/page-header";
+@import "blocks/product";
+@import "blocks/product-catalog";
+@import "blocks/program-form";
+@import "blocks/programs-selection";
+@import "blocks/site-list";
+@import "blocks/footer";
