--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -7,6 +7,10 @@
 .additional-card__description {
   display: flex;
   justify-content: space-between;
+  font-family: $font-ArialMT;
+  color: #444444;
+  font-size: 14px;
+  line-height: 14px;
 }
 
 .additional-card__title {
@@ -14,9 +18,8 @@
   text-transform: uppercase;
 }
 
-.additional-card__description {
-  font-family: $font-ArialMT;
-  color: #444444;
-  font-size: 14px;
-  line-height: 14px;
+.additional-card__button {
+  padding: 10px 0;
+  text-align: center;
+  text-transform: uppercase;
 }
