--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -7,6 +7,7 @@
 .features__title {
   font-size: 36px;
   line-height: 60px;
+  font-weight: 500;
 }
 
 .features__list {
@@ -23,62 +24,30 @@
   position: relative;
 }
 
-.features__item--sheet {
-  &::before {
-    content: "";
-    width: 60px;
-    height: 60px;
-    background-color: #68b738;
-    position: absolute;
-    left: -80px;
-    top: 0;
-    background-image: url("../img/advantage-leaf@1x.png");
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.features__item::before {
+  content: "";
+  width: 60px;
+  height: 60px;
+  background-color: #68b738;
+  position: absolute;
+  left: -80px;
+  top: 0;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.features__item--tank {
-  &::before {
-    content: "";
-    width: 60px;
-    height: 60px;
-    background-color: #68b738;
-    position: absolute;
-    left: -80px;
-    top: 0;
-    background-image: url("../img/advantage-powder@1x.png");
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.features__item--sheet::before {
+  background-image: url("../img/advantage-leaf@1x.png");
 }
 
-.features__item--tableware {
-  &::before {
-    content: "";
-    width: 60px;
-    height: 60px;
-    background-color: #68b738;
-    position: absolute;
-    left: -80px;
-    top: 0;
-    background-image: url("../img/advantage-dining@1x.png");
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.features__item--tank::before {
+  background-image: url("../img/advantage-powder@1x.png");
 }
 
-.features__item--clock {
-  &::before {
-    content: "";
-    width: 60px;
-    height: 60px;
-    background-color: #68b738;
-    position: absolute;
-    left: -80px;
-    top: 0;
-    background-image: url("../img/advantage-clock@1x.png");
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+.features__item--tableware::before {
+  background-image: url("../img/advantage-dining@1x.png");
+}
+
+.features__item--clock::before {
+  background-image: url("../img/advantage-clock@1x.png");
 }
