--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -1,28 +1,28 @@
-.site-list {
+.site-navigation {
   list-style: none;
   margin: 0;
   padding-left: 0;
-  font-weight: bold;
+  font-weight: 500;
   text-transform: uppercase;
 }
 
-.site-list__link {
+.site-navigation__link {
   font-size: 20px;
   color: #111111;
 }
 
-.site-list__item {
+.site-navigation__item {
   border-top: 1px solid #ebebeb;
 }
 
-.site-list__item--index {
+.site-navigation__item--index {
   padding: 21px 0 22px;
 }
 
-.site-list__item--catalog {
+.site-navigation__item--catalog {
   padding: 21px 0 22px;
 }
 
-.site-list__item--programs {
+.site-navigation__item--programs {
   padding: 21px 0 22px;
 }
