--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,15 +1,19 @@
+/* oswald-regular - cyrillic */
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/oswaldmedium.woff") format("woff");
-  src: url("../fonts/oswaldmedium.woff2") format("woff2");
-  font-weight: bold;
   font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/oswald-v29-cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/oswald-v29-cyrillic-regular.woff") format("woff");
 }
 
+/* oswald-500 - cyrillic */
 @font-face {
   font-family: "Oswald";
-  src: url("../fonts/oswaldregular.woff") format("woff");
-  src: url("../fonts/oswaldregular.woff2") format("woff2");
-  font-weight: normal;
   font-style: normal;
+  font-weight: 500;
+  src: local(""),
+    url("../fonts/oswald-v29-cyrillic-500.woff2") format("woff2"),
+    url("../fonts/oswald-v29-cyrillic-500.woff") format("woff");
 }
