--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -3,7 +3,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  src: local(""),
+  src: local("Oswald"),
     url("../fonts/oswald-v29-cyrillic-regular.woff2") format("woff2"),
     url("../fonts/oswald-v29-cyrillic-regular.woff") format("woff");
 }
@@ -13,7 +13,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 500;
-  src: local(""),
+  src: local("Oswald"),
     url("../fonts/oswald-v29-cyrillic-500.woff2") format("woff2"),
     url("../fonts/oswald-v29-cyrillic-500.woff") format("woff");
 }
