Начало адаптивной верстки

--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -1,7 +1,7 @@
 .additional-card {
   display: flex;
   flex-direction: column;
-  padding: $padding-container;
+  padding: $padding-item;
 }
 
 .additional-card__description {
