--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,24 +1,25 @@
 .features {
-  padding: $padding-container;
+  padding: $padding-item;
   display: flex;
   flex-direction: column;
 }
 
 .features__title {
+  color: $color-oswald;
   font-size: 36px;
   line-height: 60px;
   font-weight: 500;
 }
 
 .features__list {
+  @include reset-list;
   padding-left: 80px;
-  list-style: none;
 }
 
 .features__item {
   padding-bottom: 20px;
   font-family: $font-ArialMT;
-  color: #444444;
+  color: $color-arial;
   font-size: 14px;
   line-height: 18px;
   position: relative;
