--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,9 +26,14 @@ a {
   text-decoration: none;
 }
 
+$mobil-width: 320px;
+$tablet-width: 768px;
+$desktop-width: 1440px;
 $font-ArialMT: "ArialMT", "Arial", sans-serif;
 $color-white: #ffffff;
-$padding-container: 0 20px;
+$padding-item: 0 20px;
+$color-oswald: #111111;
+$color-arial: #444444;
 
 @import "fonts";
 @import "mixins";
