--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,7 @@ $color-white: #ffffff;
 $padding-item: 0 20px;
 $color-oswald: #111111;
 $color-arial: #444444;
+$fill-footer-svg: #666666;
 
 @import "fonts";
 @import "mixins";
