--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -2,6 +2,7 @@
   color: $color-oswald;
   font-size: 36px;
   line-height: 60px;
+  font-weight: 400;
   border-bottom: 1px solid #d9d9d9;
   padding: $padding-item;
   margin: 0;
@@ -19,4 +20,28 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+}
+
+@media (min-width: $tablet-width) {
+  .product-catalog__title {
+    font-size: 60px;
+    line-height: 60px;
+    border: none;
+    padding: 70px 0 156px 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product-catalog__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product-catalog__item {
+    padding: 0 0 40px 0;
+    background-color: #f2f2f2;
+  }
 }
