--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -45,3 +45,41 @@
   text-align: center;
   padding: 10px 0;
 }
+
+.product__img-tablet {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .product {
+    flex-direction: column;
+    background-color: #f2f2f2;
+    align-items: stretch;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__img-link {
+    background-color: #f2f2f2;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__img {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__img-tablet {
+    display: inherit;
+    margin-top: -45px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__title {
+    text-align: center;
+    padding: 0;
+  }
+}
