--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -27,3 +27,45 @@
   font-size: 12px;
   line-height: 16px;
 }
+
+@media (min-width: $tablet-width) {
+  .more-products {
+    padding-top: 70px;
+    background-color: white;
+    border: 1px solid #d9d9d9;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .more-products__plus {
+    padding-bottom: 65px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .more-products__title {
+    color: $color-oswald;
+    font-size: 20px;
+    line-height: 20px;
+    padding-bottom: 30px;
+    padding-right: 48px;
+    padding-left: 48px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .more-products__description {
+    color: $font-ArialMT;
+    text-align: center;
+    font-size: 16px;
+    padding-bottom: 35px;
+    max-width: 180px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .more-products__button-link {
+    margin-bottom: 38px;
+    color: $color-oswald;
+  }
+}
