--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -46,40 +46,61 @@
   padding: 10px 0;
 }
 
-.product__img-tablet {
-  display: none;
-}
-
 @media (min-width: $tablet-width) {
   .product {
     flex-direction: column;
     background-color: #f2f2f2;
     align-items: stretch;
+    padding-bottom: 40px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .product__img-link {
     background-color: #f2f2f2;
+    text-align: center;
   }
 }
 
 @media (min-width: $tablet-width) {
   .product__img {
-    display: none;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .product__img-tablet {
-    display: inherit;
-    margin-top: -45px;
+    margin-top: -60px;
+    padding: 0;
+    /*Временно для демонстрации*/
+    width: 324px;
   }
 }
 
 @media (min-width: $tablet-width) {
   .product__title {
+    color: $color-oswald;
+    font-size: 20px;
+    line-height: 20px;
     text-align: center;
-    padding: 0;
+    padding: 40px 0 30px 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__button {
+    margin: 0 40px;
+    margin-top: 30px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__wrapper-text {
+    padding: 0 40px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .product__description-wrapper {
+    font-size: 16px;
+    line-height: 16px;
+    color: $font-ArialMT;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #cdcdcd;
   }
 }
