Сетки перед консультацией

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,3 +1,19 @@
+@media (min-width: $tablet-width) {
+  .hero {
+    padding-left: 90px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .hero {
+    display: flex;
+    padding: 0;
+    background-color: #ffffff;
+    width: 100%;
+    z-index: 1;
+  }
+}
+
 .hero__wrapper-title {
   display: flex;
   flex-direction: column;
@@ -11,6 +27,14 @@
   left: 0;
 }
 
+@media (min-width: $tablet-width) {
+  .hero__wrapper-title {
+    background: none;
+    align-items: flex-start;
+    padding-bottom: 20px;
+  }
+}
+
 .hero__wrapper-img {
   display: flex;
   flex-direction: column;
@@ -18,6 +42,22 @@
   align-content: stretch;
   margin-top: -135px;
   padding-bottom: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .hero__wrapper-img {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .hero__wrapper-img {
+    background-color: #68b738;
+    width: 50%;
+    flex-grow: 1;
+  }
 }
 
 .hero__title {
@@ -28,6 +68,22 @@
   font-weight: normal;
   margin: 0;
   padding-top: 30px;
+}
+
+@media (min-width: $tablet-width) {
+  .hero__title {
+    color: $color-oswald;
+    font-size: 60px;
+    line-height: 60px;
+    padding-right: 60px;
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .hero__title {
+    padding: 0;
+  }
 }
 
 .hero__subtitle {
@@ -41,29 +97,6 @@
   padding-top: 24px;
 }
 
-.hero__button {
-  color: $color-white;
-  font-size: 14px;
-  line-height: 14px;
-  padding: 13px 78px;
-}
-
-@media (min-width: $tablet-width) {
-  .hero {
-    padding-left: 90px;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .hero__title {
-    color: $color-oswald;
-    font-size: 60px;
-    line-height: 60px;
-    padding-right: 60px;
-    text-align: left;
-  }
-}
-
 @media (min-width: $tablet-width) {
   .hero__subtitle {
     color: $color-oswald;
@@ -73,21 +106,11 @@
   }
 }
 
-@media (min-width: $tablet-width) {
-  .hero__wrapper-title {
-    background: none;
-    align-items: flex-start;
-    padding-bottom: 20px;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .hero__wrapper-img {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    margin-top: 0;
-  }
+.hero__button {
+  color: $color-white;
+  font-size: 14px;
+  line-height: 14px;
+  padding: 13px 78px;
 }
 
 @media (min-width: $tablet-width) {
