--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -6,6 +6,14 @@
   @include reset-list;
 }
 
+@media (min-width: $desktop-width) {
+  .advantages__list {
+    display: flex;
+    justify-content: space-around;
+    padding: 0 70px 0 70px;
+  }
+}
+
 .advantages__item {
   &::before,
   &::after {
@@ -18,6 +26,31 @@
   position: relative;
 }
 
+@media (min-width: $tablet-width) {
+  .advantages__item {
+    &::after,
+    &::before {
+      content: "";
+      position: absolute;
+    }
+    padding: 0;
+    padding-top: 80px;
+    padding-left: 52px;
+    padding-bottom: 62px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__item {
+    display: flex;
+    flex-direction: column;
+    margin: 0 40px;
+    padding: 80px 54px 62px 54px;
+    /*смог выровнять только так, при этом съедаются паддинги самого списка*/
+    min-width: 50%;
+  }
+}
+
 .advantages__title {
   font-weight: 400;
   text-align: left;
@@ -26,6 +59,48 @@
   line-height: 37px;
   padding-left: 70px;
   margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .advantages__title {
+    font-size: 36px;
+    line-height: 37px;
+    padding-left: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__title {
+    padding-left: 162px;
+    padding-bottom: 70px;
+  }
+}
+
+.advantages__description {
+  color: $color-arial;
+  font-family: $font-ArialMT;
+  font-size: 14px;
+  line-height: 18px;
+  border-bottom: 1px solid #d9d9d9;
+  padding-bottom: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .advantages__description {
+    margin: 0;
+    padding-top: 26px;
+    padding-right: 275px;
+    padding-bottom: 50px;
+    font-size: 16px;
+    line-height: 24px;
+    border: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__description {
+    padding: 0 0 32px 0;
+  }
 }
 
 .advantages__item--sit-before {
@@ -37,6 +112,36 @@
     border-radius: 50px;
     top: 25px;
     left: 30px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advantages__item--sit-before {
+    &::before {
+      width: 200px;
+      height: 200px;
+      background-color: #5eaa2f;
+      background-position: center;
+      border-radius: 200px;
+      top: 92px;
+      left: auto;
+      right: 62px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__item--sit-before {
+    &::before {
+      width: 100px;
+      height: 100px;
+      background-color: #5eaa2f;
+      background-position: center;
+      border-radius: 100px;
+      top: 54px;
+      left: 54px;
+      right: auto;
+    }
   }
 }
 
@@ -52,6 +157,32 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .advantages__item--sit-after {
+    &::after {
+      width: 141px;
+      height: 194px;
+      background-size: 100%;
+      top: 92px;
+      left: auto;
+      right: 85px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__item--sit-after {
+    &::after {
+      width: 71px;
+      height: 97px;
+      background-size: 100%;
+      top: 0;
+      left: 0;
+      right: auto;
+    }
+  }
+}
+
 .advantages__item--stand-before {
   &::before {
     width: 50px;
@@ -64,6 +195,32 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .advantages__item--stand-before {
+    &::before {
+      width: 200px;
+      height: 200px;
+      border-radius: 200px;
+      top: 92px;
+      left: auto;
+      right: 62px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__item--stand-before {
+    &::before {
+      width: 100px;
+      height: 100px;
+      border-radius: 100px;
+      top: 0;
+      left: 54px;
+      right: auto;
+    }
+  }
+}
+
 .advantages__item--stand-after {
   &::after {
     width: 67px;
@@ -73,6 +230,32 @@
     background-position: center;
     top: 35px;
     left: 22px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advantages__item--stand-after {
+    &::after {
+      width: 268px;
+      height: 113px;
+      background-size: 100%;
+      top: 140px;
+      left: auto;
+      right: 25px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .advantages__item--stand-after {
+    &::after {
+      width: 134px;
+      height: 57px;
+      background-size: 100%;
+      top: 0;
+      left: 0;
+      right: auto;
+    }
   }
 }
 
@@ -94,112 +277,6 @@
   position: relative;
 }
 
-.advantages__description {
-  color: $color-arial;
-  font-family: $font-ArialMT;
-  font-size: 14px;
-  line-height: 18px;
-  border-bottom: 1px solid #d9d9d9;
-  padding-bottom: 20px;
-}
-
-@media (min-width: $tablet-width) {
-  .advantages {
-    padding: 0;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item {
-    &::after,
-    &::before {
-      content: "";
-      position: absolute;
-    }
-    padding: 0;
-    padding-top: 80px;
-    padding-left: 52px;
-    padding-bottom: 62px;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item--sit-before {
-    &::before {
-      width: 200px;
-      height: 200px;
-      background-color: #5eaa2f;
-      background-position: center;
-      border-radius: 200px;
-      top: 92px;
-      left: auto;
-      right: 62px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item--sit-after {
-    &::after {
-      width: 141px;
-      height: 194px;
-      background-size: 100%;
-      top: 92px;
-      left: auto;
-      right: 85px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item--stand-before {
-    &::before {
-      width: 200px;
-      height: 200px;
-      background-color: #5eaa2f;
-      background-position: center;
-      border-radius: 200px;
-      top: 92px;
-      left: auto;
-      right: 62px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__item--stand-after {
-    &::after {
-      width: 268px;
-      height: 113px;
-      background-size: 100%;
-      top: 140px;
-      left: auto;
-      right: 25px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__title {
-    font-size: 36px;
-    line-height: 37px;
-    padding-left: 0;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .advantages__description {
-    font-family: $font-ArialMT;
-    margin: 0;
-    padding-top: 26px;
-    padding-right: 275px;
-    padding-bottom: 50px;
-    font-size: 16px;
-    line-height: 24px;
-    border: none;
-  }
-}
-
 @media (min-width: $tablet-width) {
   .advantages__link {
     &::before {
@@ -207,5 +284,11 @@
       right: -50px;
     }
     font-size: 20px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .advantages {
+    padding: 0;
   }
 }
