--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -59,4 +59,4 @@ $fill-footer-svg: #666666;
 @import "blocks/programs-selection";
 @import "blocks/site-navigation";
 @import "blocks/footer";
-@import "blocks/site-container";
+@import "blocks/container";
