--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,63 +1,19 @@
-@media (min-width: $tablet-width) {
-  .hero {
-    padding-left: 90px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .hero {
-    display: flex;
-    padding: 0;
-    background-color: #ffffff;
-    width: 100%;
-    z-index: 1;
-  }
+.hero {
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 .hero__wrapper-title {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: stretch;
-  background-color: #5eaa2f;
-  background-image: url("../img/index-background-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  top: 0;
-  left: 0;
-}
-
-@media (min-width: $tablet-width) {
-  .hero__wrapper-title {
-    background: none;
-    align-items: flex-start;
-    padding-bottom: 20px;
-  }
 }
 
 .hero__wrapper-img {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: stretch;
   margin-top: -135px;
   padding-bottom: 20px;
-}
-
-@media (min-width: $tablet-width) {
-  .hero__wrapper-img {
-    display: flex;
-    flex-direction: row;
-    margin-top: 0;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .hero__wrapper-img {
-    background-color: #68b738;
-    width: 50%;
-    flex-grow: 1;
-  }
 }
 
 .hero__title {
@@ -68,22 +24,6 @@
   font-weight: normal;
   margin: 0;
   padding-top: 30px;
-}
-
-@media (min-width: $tablet-width) {
-  .hero__title {
-    color: $color-oswald;
-    font-size: 60px;
-    line-height: 60px;
-    padding-right: 60px;
-    text-align: left;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .hero__title {
-    padding: 0;
-  }
 }
 
 .hero__subtitle {
@@ -97,7 +37,42 @@
   padding-top: 24px;
 }
 
+.hero__button {
+  color: $color-white;
+  font-size: 14px;
+  line-height: 14px;
+  padding: 13px 76px;
+}
+
 @media (min-width: $tablet-width) {
+  .hero {
+    background: none;
+  }
+
+  .hero__wrapper {
+    padding-left: 90px;
+  }
+
+  .hero__wrapper-title {
+    background: none;
+    align-items: flex-start;
+    padding-bottom: 20px;
+  }
+
+  .hero__wrapper-img {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+
+  .hero__title {
+    color: $color-oswald;
+    font-size: 60px;
+    line-height: 60px;
+    padding-right: 60px;
+    text-align: left;
+  }
+
   .hero__subtitle {
     color: $color-oswald;
     font-size: 20px;
@@ -106,15 +81,26 @@
   }
 }
 
-.hero__button {
-  color: $color-white;
-  font-size: 14px;
-  line-height: 14px;
-  padding: 13px 78px;
-}
+@media (min-width: $desktop-width) {
+  .hero__wrapper {
+    display: flex;
+    padding: 0;
+    background-color: #ffffff;
+    width: 100%;
+    z-index: 1;
+  }
 
-@media (min-width: $tablet-width) {
   .hero__img {
     order: 2;
+  }
+
+  .hero__wrapper-img {
+    background-color: #68b738;
+    width: 50%;
+    flex-grow: 1;
+  }
+
+  .hero__title {
+    padding: 0;
   }
 }
