--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  padding: $padding-item;
   display: flex;
   flex-direction: column;
 }
@@ -54,6 +53,10 @@
   .footer {
     padding: 0;
   }
+
+  .footer__social {
+    background-color: #f2f2f2;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -62,7 +65,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 60px 30px;
-    background-color: #f2f2f2;
   }
 }
 
