--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -7,6 +7,7 @@
   color: $color-oswald;
   background-color: #ffffff;
   display: flex;
+  padding: 0 20px;
 }
 
 .page-header__logo-link {
@@ -16,11 +17,9 @@
 .page-header__logo-img {
   padding-top: 11px;
   padding-bottom: 11px;
-  padding-left: 20px;
 }
 
 .page-header__toggle {
-  margin-right: 20px;
   border-style: none;
   background-color: #ffffff;
 }
@@ -31,6 +30,10 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+  }
+
+  .page-header__nav-header {
+    padding-left: 30px;
   }
 
   .page-header__toggle {
