Работа над каталогом - адаптивные сетки

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -51,7 +51,11 @@
   }
 
   .hero__wrapper {
-    padding-left: 90px;
+    padding-left: 86px;
+  }
+
+  .hero__wrapper--desktop {
+    padding-left: 86px;
   }
 
   .hero__wrapper-title {
@@ -96,18 +100,27 @@
 }
 
 @media (min-width: $desktop-width) {
+  .hero {
+    display: flex;
+  }
+
   .hero__wrapper {
     display: flex;
     padding: 0;
+    padding-top: 120px;
     background-color: #ffffff;
-    width: 100%;
+    width: 50%;
     z-index: 1;
   }
 
-  .hero__wrapper-img {
-    background-color: #68b738;
+  .hero__wrapper--desktop {
     width: 50%;
-    flex-grow: 1;
+    background-color: #68b738;
+    padding-top: 120px;
+  }
+
+  .hero__wrapper-img {
+    flex-direction: row;
   }
 
   .hero__title {
