--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -90,11 +90,84 @@
   .features {
     padding: 0;
   }
+
+  .features__item--sheet {
+    &::after {
+      content: "1";
+      position: absolute;
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 295px;
+      top: 94px;
+      left: 100px;
+      color: #f2f2f2;
+      width: 71px;
+      height: 228px;
+      z-index: 1;
+    }
+  }
+
+  .features__item--tank {
+    &::after {
+      content: "2";
+      position: absolute;
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 295px;
+      top: 94px;
+      left: 100px;
+      color: #f2f2f2;
+      width: 71px;
+      height: 228px;
+      z-index: 1;
+    }
+  }
+
+  .features__item--tableware {
+    &::after {
+      content: "3";
+      position: absolute;
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 295px;
+      top: 94px;
+      left: 100px;
+      color: #f2f2f2;
+      width: 71px;
+      height: 228px;
+      z-index: 1;
+    }
+  }
+
+  .features__item--clock {
+    &::after {
+      content: "4";
+      position: absolute;
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 295px;
+      top: 94px;
+      left: 100px;
+      color: #f2f2f2;
+      width: 71px;
+      height: 228px;
+      z-index: 1;
+    }
+  }
 }
 
 @media (min-width: $desktop-width) {
+  .features {
+    padding-top: 80px;
+  }
+
   .features__item {
     padding-right: 0;
-    width: 25%;
+    max-width: 245px;
+  }
+
+  .features__list {
+    justify-content: space-between;
+  }
+
+  .features__title {
+    margin: 0;
+    padding-bottom: 60px;
   }
 }
