--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -7,12 +7,14 @@
 
 @media (min-width: $tablet-width) {
   .container {
+    max-width: 768px;
     padding: 0 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .container {
+    max-width: 1440px;
     padding: 0 110px;
   }
 }
