--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -33,27 +33,23 @@
     padding-top: 70px;
     background-color: white;
     border: 1px solid #d9d9d9;
+    max-width: 324px;
   }
-}
 
-@media (min-width: $tablet-width) {
   .more-products__plus {
     padding-bottom: 65px;
   }
-}
 
-@media (min-width: $tablet-width) {
   .more-products__title {
     color: $color-oswald;
     font-size: 20px;
     line-height: 20px;
+    text-align: center;
     padding-bottom: 30px;
-    padding-right: 48px;
-    padding-left: 48px;
+    padding-right: 46px;
+    padding-left: 46px;
   }
-}
 
-@media (min-width: $tablet-width) {
   .more-products__description {
     color: $font-ArialMT;
     text-align: center;
@@ -61,11 +57,20 @@
     padding-bottom: 35px;
     max-width: 180px;
   }
-}
 
-@media (min-width: $tablet-width) {
   .more-products__button-link {
     margin-bottom: 38px;
     color: $color-oswald;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .more-products {
+    max-width: 245px;
+  }
+
+  .more-products__button-link {
+    width: 165px;
+    min-width: inherit;
   }
 }
