--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -4,7 +4,6 @@
   line-height: 60px;
   font-weight: 400;
   border-bottom: 1px solid #d9d9d9;
-  padding: $padding-item;
   margin: 0;
 }
 
@@ -22,6 +21,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  padding: 25px 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -34,7 +34,7 @@
 
   .product-catalog__item-wrapper {
     background-color: #f2f2f2;
-    width: 324px;
+    max-width: 324px;
   }
 
   .product-catalog__list {
@@ -47,5 +47,19 @@
     margin-bottom: 140px;
     border: none;
     padding: 0 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product-catalog__list {
+    margin: 0 -40px;
+  }
+
+  .product-catalog__item {
+    padding: 0 40px;
+  }
+
+  .product-catalog__item-wrapper {
+    max-width: 245px;
   }
 }
