--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -60,10 +60,7 @@
   }
 
   .product__img {
-    padding: 0;
-    /*Временно для демонстрации*/
-    margin-top: -60px;
-    width: 324px;
+    display: none;
   }
 
   .product__title {
@@ -93,11 +90,11 @@
     display: none;
   }
 
-  .product__wrapper-text {
-    padding: 0 32px;
-  }
-
   .product-catalog__list {
     display: flex;
+  }
+
+  .product__title {
+    padding: 40px 0 30px 0;
   }
 }
